# routeviz

./: .gitignore  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: generator.rs  graph.rs  layout.rs  lib.rs  pool.rs  token.rs  trace.rs
core/src/algo/: amount_aware.rs  arb_scan.rs  bellman_ford.rs  bounded_bf.rs  dijkstra.rs  gas.rs  mod.rs  path.rs  split_common.rs  split_dp.rs  split_fw.rs  testkit.rs
core/src/algo/prime/: asgm.rs  config.rs  find_path.rs  hub.rs  merge.rs  mod.rs  path.rs  shortcut.rs  sim.rs  tests.rs  util.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  ArbView.tsx  BenchmarksView.tsx  GraphPanel.tsx  PlaybackControls.tsx  RouterView.tsx  TokenGraphCanvas.tsx  index.css  types.ts  useRouteviz.ts
web/web/public/: benchmarks.json
