[package]
name = "routeviz-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface and benchmark harness for routeviz."
license = "MIT"

[dependencies]
alloy-primitives = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
routeviz-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "routeviz"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
