[package]
name = "routeviz-core"
version = "0.1.0"
edition = "2024"
description = "Core DEX routing and arbitrage algorithms for routeviz."
license = "MIT"

[dependencies]
alloy-primitives = { version = "1", features = ["serde", "rand"] }
ordered-float = "5"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
