[package]
name = "routeviz-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for routeviz."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives = { version = "1", features = ["serde"] }
routeviz-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

# Transitive `getrandom 0.2` and `0.3` both need their wasm-js backends
# turned on when targeting wasm32-unknown-unknown. 0.3 additionally needs
# the `getrandom_backend="wasm_js"` cfg, set in `.cargo/config.toml`.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

# rustflags for wasm32-unknown-unknown live in <workspace>/.cargo/config.toml
# — cargo ignores them when placed in a crate manifest.
